--- a/src/GradesScene.fxml
+++ b/src/GradesScene.fxml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
@@ -64,76 +58,17 @@
             <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="216.0" layoutY="544.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
          </children>
       </AnchorPane>
-      <ScrollPane fx:id="rightBg" layoutX="297.0" layoutY="20.0" prefHeight="535.0" prefWidth="785.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane fx:id="rightBg" hbarPolicy="NEVER" layoutX="297.0" layoutY="20.0" prefHeight="580.0" prefWidth="950.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane>
                <children>
-                  <VBox prefHeight="376.0" prefWidth="943.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox fx:id="semLst" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
                      <children>
-                        <Button fx:id="addSem4" layoutX="10.0" layoutY="233.0" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
-                        <TitledPane animated="false" prefHeight="271.0" prefWidth="943.0" text="sem">
-                           <content>
-                              <VBox prefHeight="249.0" prefWidth="941.0">
-                                 <children>
-                                    <TitledPane animated="false" prefHeight="189.0" prefWidth="921.0" text="class">
-                                       <content>
-                                          <VBox prefHeight="181.0" prefWidth="926.0">
-                                             <children>
-                                                <ScrollPane prefHeight="90.0" prefWidth="906.0">
-                                                   <content>
-                                                      <HBox prefHeight="79.0" prefWidth="906.0">
-                                                         <children>
-                                                            <AnchorPane prefHeight="79.0" prefWidth="105.0">
-                                                               <children>
-                                                                  <TextField prefHeight="25.0" prefWidth="73.0" />
-                                                                  <TextField layoutX="75.0" prefHeight="25.0" prefWidth="25.0" />
-                                                                  <Label layoutX="4.0" layoutY="26.0" text="partition info" />
-                                                               </children>
-                                                            </AnchorPane>
-                                                            <AnchorPane prefHeight="100.0" prefWidth="52.0">
-                                                               <children>
-                                                                  <TextField prefHeight="25.0" prefWidth="44.0" />
-                                                                  <TextField layoutY="27.0" prefHeight="25.0" prefWidth="44.0" />
-                                                                  <Label layoutX="3.0" layoutY="54.0" prefHeight="21.0" prefWidth="45.0" text="00.00%" />
-                                                                  <CheckBox layoutX="33.0" layoutY="-1.0" mnemonicParsing="false" />
-                                                               </children>
-                                                            </AnchorPane>
-                                                            <Button fx:id="addSem3" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
-                                                         </children>
-                                                      </HBox>
-                                                   </content>
-                                                </ScrollPane>
-                                                <Button fx:id="addSem2" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
-                                                <HBox prefHeight="54.0" prefWidth="906.0">
-                                                   <children>
-                                                      <Label prefHeight="50.0" prefWidth="53.0" text="percentpoint" />
-                                                      <AnchorPane minWidth="-Infinity" prefHeight="45.0" prefWidth="33.0">
-                                                         <children>
-                                                            <TextField layoutX="1.0" minHeight="-Infinity" prefHeight="15.0" prefWidth="28.0" />
-                                                            <TextField layoutX="1.0" layoutY="15.0" minHeight="-Infinity" prefHeight="15.0" prefWidth="28.0" />
-                                                            <TextField layoutX="1.0" layoutY="30.0" minHeight="-Infinity" prefHeight="15.0" prefWidth="28.0" />
-                                                         </children>
-                                                      </AnchorPane>
-                                                      <AnchorPane layoutX="79.0" layoutY="10.0" prefHeight="50.0" prefWidth="40.0">
-                                                         <children>
-                                                            <Label layoutX="3.0" layoutY="14.0" text="est" />
-                                                            <ChoiceBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="15.0" prefWidth="32.0" />
-                                                         </children>
-                                                      </AnchorPane>
-                                                      <TextArea prefHeight="50.0" prefWidth="765.0" />
-                                                   </children>
-                                                </HBox>
-                                             </children>
-                                          </VBox>
-                                       </content>
-                                    </TitledPane>
-                                    <Button fx:id="addSem1" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
-                                 </children>
-                              </VBox>
-                           </content>
-                        </TitledPane>
-                        <Button fx:id="addSem" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
+                        <Button fx:id="addSemBtn" layoutX="10.0" layoutY="233.0" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
                      </children>
+                     <padding>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     </padding>
                   </VBox>
                </children>
             </AnchorPane>
