--- a/src/temp.fxml
+++ b/src/temp.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -74,11 +75,17 @@
                                                    </children>
                                                 </HBox>
                                              </children>
+                                             <padding>
+                                                <Insets left="5.0" right="5.0" top="5.0" />
+                                             </padding>
                                           </VBox>
                                        </content>
                                     </TitledPane>
                                     <Button fx:id="addSem1" mnemonicParsing="false" onMouseClicked="#addSem" text="+" />
                                  </children>
+                                 <padding>
+                                    <Insets left="5.0" right="5.0" top="5.0" />
+                                 </padding>
                               </VBox>
                            </content>
                         </TitledPane>
